--- a/Social-App-Designing/src/components/posts.css
+++ b/Social-App-Designing/src/components/posts.css
@@ -23,7 +23,9 @@
   padding: 0px;
 }
 .post-img img {
-  width: 550px;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
   height: 550px;
   padding: 16px 0px;
 }
