--- a/Social-App-Designing/src/components/topNavbar.css
+++ b/Social-App-Designing/src/components/topNavbar.css
@@ -2,13 +2,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(9, 157, 243);
   color: #ffffff;
   padding: 10px;
-  width: 100%;
-  position: sticky;
+  z-index: 999;
+}
+.wrapper_nav {
+  position: relative;
   top: 0px;
-  z-index: 99;
+  width: 100%;
+  background-color: rgb(9, 157, 243);
 }
 .searchbar {
   display: flex;
@@ -75,4 +77,7 @@
   background-color: red;
   border: 1px solid red;
   border-radius: 50%;
+}
+.title {
+  color: #fff;
 }
